# document_search

./: .gitignore  BERT_Vector_Default.ipynb  BERT_Vector_UpgradeChunks.ipynb  DeepPavlov_TestingModel_Default.ipynb  DeepPavlov_Vector_Default.ipynb  GarantAnalysis.ipynb  MPNet_TestingModel_Default.ipynb  MPNet_Vector_Default.ipynb  Microsoft_TestingModel_Default.ipynb  Microsoft_Vector_Default.ipynb  README.md  SBER_TestingModel_Default-Copy1.ipynb  SBER_Vector_Default-Copy1.ipynb  TestingModel_Default.ipynb  TestingModel_UpgradeChunks.ipynb  garant.txt  pyproject.toml
results_BERT_Default/: text_index.faiss
results_BERT_UpgradeChunks/: text_index.faiss
results_DeepPavlov_Default/vectors/: garant_0038.txt  garant_0192.txt  garant_0422.txt  garant_0702.txt  garant_0850.txt  garant_0991.txt  garant_1021.txt  garant_1022.txt  garant_1261.txt  garant_1341.txt  garant_1425.txt  garant_1867.txt
results_MPNet_Default/vectors/: garant_0055.txt  garant_0061.txt  garant_0160.txt  garant_0291.txt  garant_0449.txt  garant_0653.txt  garant_1007.txt  garant_1117.txt  garant_1118.txt  garant_1121.txt  garant_1220.txt  garant_1281.txt  garant_1337.txt  garant_1359.txt  garant_1668.txt
results_Microsoft_Default/vectors/: garant_0078.txt  garant_0166.txt  garant_0412.txt  garant_0468.txt  garant_0522.txt  garant_0593.txt  garant_0714.txt  garant_0793.txt  garant_0853.txt  garant_0953.txt  garant_0956.txt  garant_1356.txt  garant_1851.txt  garant_2063.txt  garant_2066.txt
results_SBER_Default/vectors/: garant_0111.txt  garant_0140.txt  garant_0234.txt  garant_0322.txt  (+10 more)
