[project]
name = "work"
version = "0.1.0"
description = ""
authors = [
    {name = "Izmailov Lev"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers (>=3.4.1,<4.0.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "wordcloud (>=1.9.4,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "nltk (>=3.9.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
